added 5545 to changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -95,6 +95,7 @@ Fixed Bug #5583: Revert safe edit assets status with notice links fatal errors w
 Fixed Bug #5587: WYSIWYG Insert link for redirect page or link asset doesn't work with manual entering of the asset ID.
 Fixed Bug #5588: Thesaurus metadata field keywords not replaced by JS API getKeywordReplacements.
 Fixed Bug #5595: Import assets from XML tool sometimes fails if the xml has invalid characters.
+Fixed Bug #5545: Using ctrl-z while viewing html source in WYSIWYG removes all tags in IE.
 
 CMS
 
