Feature #5436: Workflow notify editor when asset made live. Since the wflow column of sq_ast_wflw is set to NULL when workflow is complete, we no longer know who started the workflow when an asset is in the approved to go live state. Introduce an extra db column "last_started_by" which always keeps the last user asset id who initiated the asset workflow process. This just needs to be loaded when workflow is started. Option on schema level defaults OFF. Change Workflow_Manager::notifyOnLive() function to call a modified version of getAssetSchemaInfo() instead so we can get all the info we want in one query.

--- a/core/assets/workflow/workflow_schema/locale/en/lang_screen_details.xml
+++ b/core/assets/workflow/workflow_schema/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.6 2009/11/27 05:39:53 lwright Exp $
+* $Id: lang_screen_details.xml,v 1.7 2012/03/21 05:34:36 mhaidar Exp $
 *
 */
 -->
@@ -20,6 +20,10 @@
 		<field attribute="name">
 			<display_name>Schema Name</display_name>
 			<note />
+		</field>
+		<field attribute="notify_starter_on_live">
+			<display_name>Notify Starter When Live?</display_name>
+			<note>If enabled, will send the Notify on Live message to the initiator of the workflow process.</note>
 		</field>
 	</section>
 	<section name="Workflow Streams">
