--- a/packages/cms/locale/en/lang_strings.xml
+++ b/packages/cms/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.20 2012/02/20 04:31:03 mhaidar Exp $
+* $Id: lang_strings.xml,v 1.21 2012/03/23 02:09:25 cupreti Exp $
 *
 *
 * CMS Package Localised Strings File
@@ -121,4 +121,9 @@
 <string source="cms_content_type_markdown_markdown_tool_not_configured">This markdown content type can not be saved because markdown tool has not been configured properly.</string>
 <string source="cms_content_type_markdown_markdownify_tool_not_configured">HTML content could not be converted to markdown content because markdownify tool has not been configured properly.</string>
 <string source="cms_not_submitted">Not submitted</string>
+
+<string source="cron_job_send_submission_log_add_new_job">Add new job</string>
+<string source="cron_job_send_submission_log_no_jobs">There are no "Send Logs" jobs scheduled for this form</string>
+<string source="cron_job_send_submission_log_at">Send the submission logs at</string>
+<string source="cron_job_send_submission_log_repeat">and repeat this process every</string>
 </strings>
