--- a/packages/cms/listing_engine/locale/en/lang_screen_details.xml
+++ b/packages/cms/listing_engine/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.24 2011/05/26 06:42:46 akarelia Exp $
+* $Id: lang_screen_details.xml,v 1.25 2012/03/27 04:07:08 akarelia Exp $
 *
 */
 -->
@@ -133,7 +133,11 @@
 		<field attribute="current_page_format">
 			<display_name>Current Page Format</display_name>
 			<note>This format defines the layout of the current page number on the listing's linked page list. If you are using the A-Z list format, this will define the layout of an item in the linked character list when no results are found under that particular letter. Available keywords: %page_number%.</note>
-		</field>	
+		</field>
+		<field attribute="hide_no_href_links">
+			<display_name>Hide Unlinked Navigational Text</display_name>
+			<note>This option lets you define if the navigational text, like 'Previous Page' or 'Next Page', should be hidden if these text is not a link. This is useful to hide 'Next Page' on last page and 'Prev Page' on first page etc.,.</note>
+		</field>
 	</section>
 	<section name="List Position Settings">
 		<field>
