--- a/packages/search/search_page/locale/en/lang_screen_details.xml
+++ b/packages/search/search_page/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.34 2011/02/16 23:41:01 akarelia Exp $
+* $Id: lang_screen_details.xml,v 1.35 2012/03/27 04:10:22 akarelia Exp $
 *
 */
 -->
@@ -129,6 +129,10 @@
 		<field attribute="current_page_format">
 			<display_name>Current Page Format</display_name>
 			<note>This is the format of current page number in pagination. Available keyword is %page_number%</note>
+		</field>
+		<field attribute="hide_no_href_links">
+			<display_name>Hide Unlinked Navigational Text</display_name>
+			<note>This option lets you define if the navigational text, like 'Previous Page' or 'Next Page', should be hidden if these text is not a link. This is useful to hide 'Next Page' on last page and 'Prev Page' on first page etc.,.</note>
 		</field>
 	</section>
 	<section name="Advanced Settings">
