Bug fix #5647enhencement -- Add an option to allow ecommerce check out page to complete an order without specifying payment gateway. Added new option to disable the necessicity of the payment gateway being defined to finish the processing of the order. By default it is set to *required*.

--- a/packages/ecommerce/delivery_methods/default_delivery_method/locale/en/lang_screen_details.xml
+++ b/packages/ecommerce/delivery_methods/default_delivery_method/locale/en/lang_screen_details.xml
@@ -10,6 +10,10 @@
 			<display_name>Payment Gateway</display_name>
 			<note>Select the payment gateway which you would like to use to process items after the checkout process.</note>
 		</field>
+		<field attribute="gateway_required">
+			<display_name>Gateway Required?</display_name>
+			<note>Allow Check Out page to complete order without defining the payment gateway. This will let users submit the order without having to pay.</note>
+		</field>
 	</section>
 	<section name="Quantity Tracking" write_access="write:attributes">
 		<field attribute="negative_quantity_message">
