--- a/packages/web_services/js_api/locale/en/lang_screen_details.xml
+++ b/packages/web_services/js_api/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.21 2011/08/17 01:08:10 akarelia Exp $
+* $Id: lang_screen_details.xml,v 1.21.4.1 2012/04/17 00:09:16 ewang Exp $
 *
 */
 -->
@@ -216,6 +216,14 @@
             <display_name>Get Lineage</display_name>
             <note />
         </field>
+        <field attribute="get_lineage_from_url">
+            <display_name>Get Lineage From URL</display_name>
+            <note />
+        </field>
+        <field attribute="get_url_from_lineage">
+            <display_name>Get URL From Lineage</display_name>
+            <note />
+        </field>	
     </section>
     <section name="Metadata" write_access="write:attributes">
         <field attribute="get_metadata">
